// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiArticle renders an article and fetches article data from Wikipedia if not provided 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Component)>
    <Connect(Component)
      forwardedRef={null}
    >
      <ForwardRef
        dispatchArticle={[Function]}
      >
        <WikiArticle
          dispatchArticle={[Function]}
          forwardedRef={null}
        >
          <article
            className="wa style-0"
            data-id="someId"
            id={null}
            onClick={null}
            role="presentation"
          >
            <div
              className="wa-header has-image"
            >
              <div
                className="wa-img"
                role="img"
                style={
                  Object {
                    "backgroundImage": "url('someimage.png')",
                  }
                }
              />
              <div
                className="wa-header-content"
              >
                <h2
                  className="wa-title"
                >
                  Some Title
                </h2>
                <h3
                  className="wa-description"
                >
                  some description
                </h3>
              </div>
            </div>
            <div
              className="wa-content"
            >
              <p
                className="wa-summary"
              >
                some extract
              </p>
              <a
                href="someDesktopUrl.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  className="material-icons"
                >
                  link
                </i>
              </a>
            </div>
          </article>
        </WikiArticle>
      </ForwardRef>
    </Connect(Component)>
  </Connect(Component)>
</Provider>
`;

exports[`WikiArticle should apply an id and accessibility attributes to article 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Component)
    id="someId"
  >
    <Connect(Component)
      forwardedRef={null}
      id="someId"
    >
      <ForwardRef
        dispatchArticle={[Function]}
        id="someId"
      >
        <WikiArticle
          dispatchArticle={[Function]}
          forwardedRef={null}
          id="someId"
        >
          <article
            className="wa style-0"
            data-id="someId"
            id="someId"
            onClick={null}
            role="presentation"
          >
            <div
              className="wa-header has-image"
            >
              <div
                aria-describedby="description-someId"
                aria-labelledby="title-someId"
                className="wa-img"
                role="img"
                style={
                  Object {
                    "backgroundImage": "url('someimage.png')",
                  }
                }
              />
              <div
                className="wa-header-content"
              >
                <h2
                  className="wa-title"
                  id="title-someId"
                >
                  Some Title
                </h2>
                <h3
                  className="wa-description"
                  id="description-someId"
                >
                  some description
                </h3>
              </div>
            </div>
            <div
              className="wa-content"
            >
              <p
                className="wa-summary"
              >
                some extract
              </p>
              <a
                href="someDesktopUrl.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  className="material-icons"
                >
                  link
                </i>
              </a>
            </div>
          </article>
        </WikiArticle>
      </ForwardRef>
    </Connect(Component)>
  </Connect(Component)>
</Provider>
`;

exports[`WikiArticle should not fetch article data if provided 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(Component)
    articleId="someId"
    description="Some description"
    summary="Some summary."
    title="Some Title"
  >
    <Connect(Component)
      articleId="someId"
      description="Some description"
      forwardedRef={null}
      summary="Some summary."
      title="Some Title"
    >
      <ForwardRef
        articleId="someId"
        description="Some description"
        dispatchArticle={[Function]}
        summary="Some summary."
        title="Some Title"
      >
        <WikiArticle
          articleId="someId"
          description="Some description"
          dispatchArticle={[Function]}
          forwardedRef={null}
          summary="Some summary."
          title="Some Title"
        >
          <article
            className="wa style-0"
            data-id="someId"
            id={null}
            onClick={null}
            role="presentation"
          >
            <div
              className="wa-header"
            >
              <div
                className="wa-header-content"
              >
                <h2
                  className="wa-title"
                >
                  Some Title
                </h2>
                <h3
                  className="wa-description"
                >
                  Some description
                </h3>
              </div>
            </div>
            <div
              className="wa-content"
            >
              <p
                className="wa-summary"
              >
                Some summary.
              </p>
              <a
                rel="noopener noreferrer"
                target="_blank"
              >
                <i
                  className="material-icons"
                >
                  link
                </i>
              </a>
            </div>
          </article>
        </WikiArticle>
      </ForwardRef>
    </Connect(Component)>
  </Connect(Component)>
</Provider>
`;
